// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput aria-describedby accepts both error id and underline id 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c1 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c1:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c1:focus {
  border-color: #4d90fe;
}

<div
  className="c0"
>
  <input
    aria-describedby="error-id underline-id"
    aria-invalid={false}
    aria-required={false}
    className="c1"
    id={undefined}
  />
</div>
`;

exports[`TextInput className 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c1 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c1:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c1:focus {
  border-color: #4d90fe;
}

<div
  className="c0"
>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-required={false}
    className="big and fat c1"
    id={undefined}
  />
</div>
`;

exports[`TextInput containerProps 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c1 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c1:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c1:focus {
  border-color: #4d90fe;
}

<div
  className="classy react c0"
  id="container"
  style={
    Object {
      "margin": "10px",
    }
  }
>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-required={false}
    className="c1"
    id={undefined}
  />
</div>
`;

exports[`TextInput default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c1 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c1:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c1:focus {
  border-color: #4d90fe;
}

<div
  className="c0"
>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-required={false}
    className="c1"
    id={undefined}
  />
</div>
`;

exports[`TextInput errorMessage 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c1 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
  border-color: #dd4b39;
}

.c1:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c1:focus {
  border-color: #4d90fe;
}

.c2 {
  margin-top: 6.5px;
  color: #dd4b39;
}

<div
  className="c0"
>
  <input
    aria-describedby={undefined}
    aria-invalid={true}
    aria-required={false}
    className="not overridden c1"
    id={undefined}
  />
  <p
    className="c2"
    id={undefined}
    role="alert"
  >
    Ya dun goofed
  </p>
</div>
`;

exports[`TextInput errorProps 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c1 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
  border-color: #dd4b39;
}

.c1:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c1:focus {
  border-color: #4d90fe;
}

.c2 {
  margin-top: 6.5px;
  color: #dd4b39;
}

<div
  className="c0"
>
  <input
    aria-describedby="error-tag"
    aria-invalid={true}
    aria-required={false}
    className="c1"
    id={undefined}
  />
  <p
    className="more classes c2"
    data-message="hi there"
    id="error-tag"
    role="alert"
  >
    Uh oh
  </p>
</div>
`;

exports[`TextInput id 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c2 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c2:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c2:focus {
  border-color: #4d90fe;
}

.c1 {
  color: #222;
  font-weight: bold;
  margin-bottom: 3px;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="first-name"
  >
    First Name
  </label>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-required={false}
    className="c2"
    id="first-name"
  />
</div>
`;

exports[`TextInput label 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c2 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c2:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c2:focus {
  border-color: #4d90fe;
}

.c1 {
  color: #222;
  font-weight: bold;
  margin-bottom: 3px;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor={undefined}
  >
    Child/Text
  </label>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-required={false}
    className="c2"
    id={undefined}
  />
</div>
`;

exports[`TextInput labelProps 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c2 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c2:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c2:focus {
  border-color: #4d90fe;
}

.c1 {
  color: #222;
  font-weight: bold;
  margin-bottom: 3px;
}

<div
  className="c0"
>
  <label
    className="right large name c1"
    htmlFor={undefined}
    id="my-label"
    style={
      Object {
        "fontSize": "16px",
      }
    }
  >
    Last Name
  </label>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-required={false}
    className="c2"
    id={undefined}
  />
</div>
`;

exports[`TextInput other props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c1 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c1:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c1:focus {
  border-color: #4d90fe;
}

<div
  className="c0"
>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-required={false}
    className="c1"
    data-key="input-key"
    id={undefined}
    onFocus={[Function]}
    style={
      Object {
        "padding": "25px 15px",
      }
    }
  />
</div>
`;

exports[`TextInput required 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c2 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c2:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c2:focus {
  border-color: #4d90fe;
}

.c1 {
  color: #222;
  font-weight: bold;
  margin-bottom: 3px;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor={undefined}
  >
    Gets an Asterisk
    <span
      className=""
    >
      *
    </span>
  </label>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-required={true}
    className="c2"
    id={undefined}
  />
</div>
`;

exports[`TextInput underline 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c1 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c1:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c1:focus {
  border-color: #4d90fe;
}

.c2 {
  min-height: 17px;
  margin: 4px 0 2px;
  font-size: 12px;
  color: #767676;
}

<div
  className="c0"
>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    aria-required={false}
    className="c1"
    id={undefined}
  />
  <p
    className="c2"
    id={undefined}
  >
    More explanation
  </p>
</div>
`;

exports[`TextInput underlineProps 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 15px;
}

.c1 {
  background: #FFFFFF;
  line-height: 20px;
  vertical-align: middle;
  padding: 6px 8px;
  color: #222;
  vertical-align: middle;
  border: 1px solid #ddd;
  border-radius: 3px 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
  background-repeat: no-repeat;
  background-position: right 8px center;
  outline: none;
}

.c1:hover {
  border-color: #b9b9b9;
  border-top-color: #a0a0a0;
}

.c1:focus {
  border-color: #4d90fe;
}

.c2 {
  min-height: 17px;
  margin: 4px 0 2px;
  font-size: 12px;
  color: #767676;
}

<div
  className="c0"
>
  <input
    aria-describedby="underline-tag"
    aria-invalid={false}
    aria-required={false}
    className="c1"
    id={undefined}
  />
  <p
    className="help explain c2"
    id="underline-tag"
    style={
      Object {
        "background": "blue",
      }
    }
  >
    Fill this in because ...
  </p>
</div>
`;
